# fastapi-project-tasks

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1c56338775f0_add_groups_table.py  7f1cbab09851_confirmed_user.py  8684303c410f_is_open_group.py  a2c3b520bca0_refresh_token.py  c0d489712652_.py  d4ad7d185e92_add_all_table.py
app/: config.py  oauth2.py  security.py
app/auth/: auth_actions.py  auth_router.py  schemas.py
app/database/: database.py  models.py  redis.py
app/group/: group_action.py  group_router.py  schemas.py
app/missions/: mission_action.py  mission_router.py  schemas.py
app/tasks/: email_sender.py
app/users/: schemas.py  user_actions.py  user_router.py
database/: database.py  models.py  user_crud.py
docker/: app.sh  celery.sh
migration/: env.py
migration/versions/: 11_06_23_add_all_table.py
tests/: conftest.py  test_auth.py  test_mission.py  test_user.py
