[tool.poetry]
name = "testenv"
version = "0.1.0"
description = ""
authors = ["Stepan <ssprudnik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
asyncpg = "^0.27.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
alembic = "^1.11.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.16"}
pydantic = {extras = ["dotenv", "email"], version = "^1.10.9"}
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
